# -vitaliy_avdoshkin_HomeWork_6_21.2

./: hlp.html  main.html  pyproject.toml
